--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" href="/public/BhargavHero.png" />
+    <link rel="preload" href="/public/BhargavHero.png" as="image" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100&display=swap"
       rel="stylesheet"
