--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preload" href="./public/BhargavHero.png" as="image" />
-    <link rel="preload" href="./public/BhargavResume.pdf" as="file" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100&display=swap"
-      rel="stylesheet"
-    />
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Bhargav.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bhargav kattunga</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" href="./public/BhargavHero.png" as="image" />
+  <link rel="preload" href="./public/Bhargav.pdf" as="file" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100&display=swap"
+    rel="stylesheet" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/Bhargav.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bhargav kattunga</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
