--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;1,100&display=swap"
     rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/Bhargav.svg" />
