added sound in pre load

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/Bhargav.svg" />
+  <link rel="preload" href="./public/hero/Sound.mp3" as="audio" type="audio/mpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bhargav kattunga</title>
 </head>
