--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/Bhargav.svg" />
   <link rel="preload" href="./public/hero/Sound.mp3" as="audio" type="audio/mpeg" />
+  <link rel="preload" href="./public/About/Things/connection.gif" as="image" type="image/gif" />
+  <link rel="preload" href="./public/About/Things/work.gif" as="image" type="image/gif" />
+  <link rel="preload" href="./public/About/Things/explore.gif" as="image" type="image/gif" />
+  <link rel="preload" href="./public/About/Things/image1.jpg" as="image" type="image/gif" />
+  <link rel="preload" href="./public/navbar/archives.gif" as="image" type="image/gif" />
+  <link rel="preload" href="./public/navbar/curated.gif" as="image" type="image/gif" />
+  <link rel="preload" href="./public/navbar/default.gif" as="image" type="image/gif" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bhargav kattunga</title>
 </head>
